# calculator_web_app_Cpp_Backend_based

backend/: CMakeLists.txt  app.js  package.json
backend/include/: calcService.h  subtraction.h
backend/script/: build.sh
backend/src/: CMakeLists.txt  addition.cpp  calcService.cpp  division.cpp  main.cpp  multiplication.cpp  subtraction.cpp
docs/: readme.md
frontend/: index.html  script.js  styles.css
