add_library(calc_lib calcService.cpp
                    addition.cpp
                    #addition.cpp 
                    #division.cpp 
                    #multiplication.cpp
                    #subtraction.cpp
                    #factorial.cpp
                    #config.cpp #has error
                   #stringmanipulator.cpp
                   #endianFlipper.cpp

)

#file(GLOB SOURCES "src/*.cpp")